@@ -56,6 +56,7 @@ public class AllTests extends TestSuite {
       suite.addTestSuite(org.xins.tests.server.AccessRuleListTests.class);
       suite.addTestSuite(org.xins.tests.server.AccessRuleTests.class);
       suite.addTestSuite(org.xins.tests.server.MetaFunctionsTests.class);
+      suite.addTestSuite(org.xins.tests.server.AllInOneAPITests.class);
       return suite;
    }
 
